--- a/src/components/Signup/SignUp.css
+++ b/src/components/Signup/SignUp.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
 }
+
 .bg-img {
   position: absolute;
   top: 0; left: 0;
@@ -34,22 +35,22 @@ h1,label ,h4 ,h6{
 }
 
 .form-container {
-    position: absolute;
-    top: 10%;
+    position: relative;
     border-radius: 12px;
     background-color:rgba(255, 255, 255, 0.836) ;
     display: flex;
-    flex-wrap: wrap;
+     padding: 2rem;
     flex-direction: column ;
     justify-content: center;
     align-items: center;
     border-radius: 12px;
-    max-height: 100vh;
     max-width: 90vh;
     overflow-x: auto;
     width: 90%;
-    height: 90vh;
-    gap: 1rem;
+    max-height: 800px;
+    height: 80vh;
+    z-index: 3;
+     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
    
 }
  input {
