the full design of the agency plan page

--- a/src/components/HOME/HomePage.css
+++ b/src/components/HOME/HomePage.css
@@ -1,20 +1,18 @@
-*{
-    padding: 0;
-    margin: 0;
-}
 
-.bg-img {
+
+.img {
   position: absolute;
   top: 0; left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
   z-index: 1;
+  border-radius: 8px;
   background-repeat:no-repeat ;
         
 }
 
-.overlay {
+.overlay-home {
   position: relative;
   z-index: 2;
   color: white;
