--- a/src/components/Plan/Plan.css
+++ b/src/components/Plan/Plan.css
@@ -1,25 +1,27 @@
-* {
-    padding: 0%;
-    margin: 0.5%;
-}
-.homepage {
+/* * {
+    padding: 0.5;
+    margin: 0.5;
+} */
+.homepage-plan {
+    
     position: relative;
-    min-height: 100vh;
-    max-width: 100%;
-}
+    height: 60vh;
+    width: 100%;
+} 
 
-.bg-img {
+.bgd-img {
   position: absolute;
-  top: 0; right: 0.5%;
+  margin-top: 0.5%;
+  margin-left: 0.5%;
   width: 99%;
   height: 60vh;
   object-fit: cover;
   z-index: 1;
-  border-radius: 10px;
-  background-color: rgba(240, 248, 255, 0.632);
+  border-radius: 13px;
+  background-color: rgba(240, 248, 255, 0.511);
 }
 
-.overlay {
+.overlay-plan {
   position: absolute;
   z-index: 2;
   top: 0;left: 0;
@@ -29,48 +31,351 @@
   text-align: center;
   padding-top: 15%;
 }
-.navbar-container {
-    position: fixed;
-    top: 0%;
+.btns-container {
+    position: absolute;
+    top: 0.5%;right: 0%;
     padding: 1px;
     display: flex;
     flex-direction:row ;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    gap: 5px;
-    width: 99%;
+    gap: 1px;
+    width: 95%;
     height: 10%;
-    border-radius: 20px;
+    border-radius: 12px;
     border-top: none;
    
     
 }
 
-.navbar-item button {
+.btn button {
     border: none;
-    color: rgb(113, 81, 26);
+    color: rgb(250, 250, 250);
     background-color: rgba(144, 121, 100, 0.007);
     width: 70px;
     height: 30px;
     
     font-family: Arial, Helvetica, sans-serif;
 }
-.navbar-item button:hover {
+.btn button:hover {
     border: none;
     border-radius: 12px;
     background-color: rgb(173, 130, 88);
-    color: rgba(245, 243, 242, 0.744);
+    color: rgba(255, 255, 255, 0.744);
     width: 70px;
     height: 30px;
     
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#travel-h {
-    width: auto;
-    color: rgb(112, 78, 33);
-}
 h1 {
-      color: rgb(152, 92, 43);
-    width: auto;
+      color: rgb(252, 252, 252);
+    width: 90%;
 }
+
+
+
+/*2compo planPicsText style -----------------*/
+#body-picsText {
+    display: flex;
+    flex-direction: row;
+    margin: 0.5%;
+    padding: 0%;
+    position: relative;
+    margin-top: 2%;
+    
+
+}
+.pics-container {
+    position: relative;
+    top: 20%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 50%;
+    height: 80%;
+    border-radius: 20%;
+
+}
+#seaPhoto,#beachPhoto,#airplanePhoto {
+    border-radius: 50px;
+    height: 50vh;
+    width: 10vw;
+
+}
+#beachPhoto {
+    border: 5px solid white;
+    position: relative;
+    right: 0;
+    margin-right: 20px;
+    margin-top: 30%;
+}
+#airplanePhoto {
+    border: 5px solid white;
+    position: relative;
+    right: 40%;
+    margin-top: 60%;
+}
+.container1 {
+    text-wrap: 100%;
+   
+}
+ 
+.container2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    height: 60%;
+    
+}
+p ,h6 {
+    color: rgb(40, 100, 98);
+}
+.side {
+    height: 5%;
+}
+/*----------- 3compo :TOP-DESTINATIONS CSS---------*/
+.scroll-wrapper {
+    border-radius: 12px;
+    padding: 0;
+    margin: 1%;
+    width: 100%;
+    background-color: rgb(223, 243, 239);
+}
+
+
+
+.Top-Destinations {
+    margin: 0%;
+    padding: 0%;
+    margin-right: 0.5%;
+   
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    width: 100%;
+    height: 85%;
+    border-radius: 12px;
+   
+}
+.top-text {
+  margin-left: 3%;
+
+}
+.destination h5 {
+    margin-left: 4rem;
+}
+
+
+.destination img {
+    position: relative;
+    left: 0;
+    
+    object-fit: cover;
+    width: 100%;
+    height: 250px;
+    border-radius: 12px;
+}
+.destinations-scroll-wrapper {
+   
+      margin-top: 3%;
+      margin-bottom:3% ;
+      margin-right: 0.5%;
+    position: relative;
+    
+    scroll-behavior: smooth;
+    display: flex;
+    gap: 23px;
+    overflow-x: hidden ;
+    overflow-y: hidden;
+    
+    
+}
+
+html , body {
+    overflow-x: hidden;
+    
+  scroll-behavior: smooth;
+}
+.destination {
+    flex: 0 0 auto;
+    flex-wrap: wrap;
+
+}
+.scroll-btn  {
+    position: relative;
+    
+    left: 5%;
+      border-radius: 5px;
+    border: none;
+    background-color:  rgb(40, 100, 98); 
+    color:  rgb(223, 231, 230);
+    width: 100px;
+    height: 40px;
+}
+
+.scroll-btn :hover {
+    border-radius: 5px;
+    border: none;
+    background-color:  rgb(40, 100, 98); 
+    color:  rgb(223, 231, 230);;
+    width: 100px;
+    height: 50px;
+}
+
+/*------4compo:SHOW PLAN STYLE ---------------------*/
+.show-container {
+    
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    gap: 45px;
+    
+ 
+}
+.show-btn  {
+    border-radius: 5px;
+    border: none;
+    color:  rgb(40, 100, 98); 
+    background-color:  rgb(249, 252, 252);;
+    width: 70px;
+    height: 30px;
+    margin-left: 38%;
+    
+}
+
+.show-btn:hover {
+    border-radius: 5px;
+    border: none;
+    background-color:  rgb(40, 100, 98); 
+    color:  rgb(244, 248, 248);;
+    width: 70px;
+    height: 30px;
+    
+    
+
+}
+ .show h3  {
+    border-radius: 2px;
+    background-color: rgba(74, 74, 74, 0.107);
+    align-self: start;
+    position: relative;
+    padding-top: 60%;
+    padding-left: 40%;
+    color: aliceblue;
+   
+
+ }
+ .show h6 {
+    color: aliceblue;
+    background-color: rgba(74, 74, 74, 0.107);
+ }
+
+
+ 
+
+
+/*-------5compo:COMMENTS SECTION -------------*/
+.comments-body  {
+   position: relative;
+   top: 30px;
+   height: 30vh;
+}
+.top-comments {
+    position: relative;
+    left: 30%;
+}
+  
+  .comments-container {
+    margin-bottom:auto ;
+    margin: 0 auto;
+    position: relative;
+    scroll-behavior: smooth;
+    display: flex;
+    gap: 2rem;
+    overflow-x: hidden ;
+    overflow-y: auto;
+     border-radius: 20px;
+    width: 60%;
+    height: 40vh;
+}
+
+.scroll-comments-btn {
+    position: relative;
+    display:flex;
+    gap: 80%;
+    margin-left: 13%;
+    top: 30%;
+   
+}
+.comment {
+    position: relative;
+     flex:0 0 auto;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1rem;
+    background-color: rgba(19, 25, 42, 0.612);
+    width: 350px;
+    height: auto;
+    border-radius: 12px;
+} 
+
+.scroll-comment {
+    position: relative;
+    top: 40%;
+    border-radius: 5px;
+    border: none;
+    background-color:  rgb(50, 78, 151); 
+    color:  rgb(255, 255, 255);;
+    width: 50px;
+    height: 30px;
+}
+
+ .scroll-comment:hover {
+    
+    border: none;
+    color:  rgb(45, 70, 180); 
+    background-color:  rgb(255, 255, 255);;
+      height: 30px;
+}
+.pov {
+    display: flex;
+    flex-wrap: wrap;
+    width: 20%;
+}
+
+.comment h4 {
+    color:white;
+    margin: 0.5rem 0;
+    position: relative;
+    width: 70%;
+    line-height: 1.4;
+    
+}
+
+
+
+/*---------6compo:footer ------*/
+
+ .footer-container {
+    position: relative;
+    top: 30vh;
+    display: flex;
+    grid-template-columns: 1fr 1fr ;
+    flex-wrap: wrap;
+    gap: 2px;
+    margin-top: 80px;
+    max-width: 100%;
+    height: 50vh;
+    background-color: rgb(72, 114, 149);
+} 
+.footer-item {
+    position: relative;
+    margin-top: 7vh;
+    margin-left: 16%;
+} 
