--- a/src/components/Signup/SignUp.css
+++ b/src/components/Signup/SignUp.css
@@ -3,7 +3,7 @@
     margin: 0;
 }
 
-.bg-img {
+.background {
   position: absolute;
   top: 0; left: 0;
   width: 100%;
@@ -12,7 +12,7 @@
   z-index: 1;
 }
 
-.overlay {
+.over {
   display: flex;
   z-index: 2;
   color: white;
@@ -34,7 +34,7 @@ h1,label ,h4 ,h6{
   font-family: 'Montserrat', sans-serif;
 }
 
-.form-container {
+.form-container-signup {
     position: relative;
     border-radius: 12px;
     background-color:rgba(255, 255, 255, 0.836) ;
