--- a/src/components/Plan/Plan.css
+++ b/src/components/Plan/Plan.css
@@ -24,7 +24,7 @@
 .overlay-plan {
   position: absolute;
   z-index: 2;
-  top: 0;left: 0;
+  top: 0.5;left: 0;
   width: 100%;
   height: 60vh;
   color: white;
@@ -34,38 +34,35 @@
 .btns-container {
     position: absolute;
     top: 0.5%;right: 0%;
-    padding: 1px;
+    padding: 0px;
     display: flex;
     flex-direction:row ;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     gap: 1px;
-    width: 95%;
+    width: 100%;
     height: 10%;
-    border-radius: 12px;
-    border-top: none;
-   
     
+    background-color: rgba(50, 116, 135, 0);
+
 }
 
 .btn button {
     border: none;
-    color: rgb(250, 250, 250);
-    background-color: rgba(144, 121, 100, 0.007);
-    width: 70px;
+    color: rgb(255, 255, 255);
+    background-color: rgba(36, 102, 117, 0);
+    width: 100px;
     height: 30px;
+    border-radius: 12px;
     
     font-family: Arial, Helvetica, sans-serif;
 }
 .btn button:hover {
     border: none;
     border-radius: 12px;
-    background-color: rgb(173, 130, 88);
-    color: rgba(255, 255, 255, 0.744);
-    width: 70px;
-    height: 30px;
-    
+      color: rgb(36, 102, 117); 
+    background-color:  rgb(249, 252, 252);;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -364,18 +361,21 @@ html , body {
 
  .footer-container {
     position: relative;
-    top: 30vh;
+    top: 40vh;
     display: flex;
     grid-template-columns: 1fr 1fr ;
     flex-wrap: wrap;
     gap: 2px;
     margin-top: 80px;
     max-width: 100%;
-    height: 50vh;
-    background-color: rgb(72, 114, 149);
+    height: 60vh;
+    background-color: rgb(36, 101, 99); 
 } 
 .footer-item {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 10%;
     margin-top: 7vh;
     margin-left: 16%;
 } 
