--- a/src/components/Discover/Discover.css
+++ b/src/components/Discover/Discover.css
@@ -1,112 +1,395 @@
-.black-d {
-    background-color: rgba(0, 0, 0, 0.194);
+* {
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
 }
+
+.toggle-btn, .nav-close-btn {
+    display: none;
+}
+
+.nav-container {
+    background-color: rgb(255, 255, 255);
+    height: 5vh;
+    display: flex;
+    gap: 5%;
+}
+
+.nav-container h2 {
+    margin-top: 0.5rem;
+    margin-left: 1rem;
+    font-size: 17px;
+    color: rgb(21, 75, 82);
+}
+
+.nav-btn {
+    position: relative;
+    margin-top: 0.1rem;
+    border-radius: 14px;
+    color: rgba(34, 122, 118, 0.993);
+    background-color: rgb(255, 255, 255);
+    border: none;
+    font-size: 1.1rem;
+    width: 10%;
+    height: 30px;
+}
+.nav-btn:hover {
+    color: white;
+    background-color:rgba(38, 139, 134, 0.79) ;
+}
+
+
+@media (max-width: 805px) {
+  .toggle-btn  {
+    display: block;
+  
+  }
+
+  
+.nav-container {
+  position: fixed;
+  top: 0;
+  left: -850px;
+  width: 290px;
+  height: 100%;
+  backdrop-filter: blur(10px);
+  background-color: rgba(255, 255, 255, 0.3);
+  box-shadow: 2px 0 8px rgba(0, 0, 0, 0.354);
+  transition: left 0.3s ease;
+  padding: 1rem;
+  z-index: 1000;
+}
+
+.nav-container.open {
+  display: flex;
+  gap: 4.5rem;
+  flex-direction: column;
+  left: 0;
+  
+}
+
+.toggle-btn {
+ background-color: rgba(250, 254, 254, 0.037);
+ border-color: black;
+ border-radius:10px ;
+  position: fixed;
+  top: 0.5rem;
+  left: 1rem;
+  font-size: 3rem;
+  
+  border: none;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+  z-index: 1100;
+}
+
+.nav-close-btn {
+  display: block;
+  font-size: 2rem;
+  background: none;
+  border: none;
+  color: rgb(255, 247, 247);
+  margin-left: 80%;
+  cursor: pointer;
+}
+
+.nav-btn {
+    width: 250px;
+    height: 50px;
+    border-radius: 27px;
+    border:1px solid rgb(24, 98, 73);
+    background-color: rgb(239, 250, 246);
+}
+ 
+.nav-btn:hover {
+  color: white;
+  background-color: rgb(50, 148, 133);
+} 
+    
+
+    .nav-container:not(.open) .nav-btn {
+    display: none;
+  }
+
+  .nav-container:not(.open) .nav-close-btn {
+    display: none;
+  }
+
+}
+
 
 /*---compo2 :south island content --*/
-.body h2, h5 ,h3 {
-    position: relative;
-    margin-left: 3%;
-    margin-top: 3%;
-    color: rgb(13, 39, 39);
+.body  {
+    padding:2rem;
 }
 
-
-.flex-body {
-    background-color: antiquewhite;
-    position: relative;
-    display: grid;
-   
-    grid-template-columns: 2.4fr 1fr;
-  
+.body h2 {
+    color: rgb(35, 106, 118);
+}
+.south-text h5 {
+    text-align: justify;
+    margin-top: 2rem;
 }
 .destination-text h3 {
     color: rgb(34, 71, 75);
     position: relative;
-    margin-left: 7%;
-    margin-top: 15px;
+   
 }
 
 
 .backItem {
-    background-color: rgba(0, 0, 255, 0.023);
+    background-color: rgba(0, 0, 255, 0);
     position: relative;
     margin-left: 3%;
 }
+
+
 .flex-body {
-    grid-template-rows: 2fr 1fr;
- 
-    justify-content: center;
-    gap: 10px;
-    background-color: rgba(249, 255, 127, 0);
-} 
+ padding-top: -5rem;
+  display: grid;
+  grid-template-columns: 2.3fr 1fr;
+  align-items: start;
+  gap: 10px;
+}
+   
+.flex h3,h5 {
+    color: rgb(9, 39, 39);
+}
+
 #body1 {
     height: 55vh;
     background-color: rgba(0, 255, 255, 0);
 } 
 
 .backItem {
+    background-color: rgba(137, 43, 226, 0);
     position: relative;
     margin-left: 3%;
 }
 
 .map {
-    
+    background-color: rgba(255, 0, 242, 0);
     position: relative;
     margin-left: 5%;
+    
 }
 
+@media(max-width:850px){
+    .map {
+        display: none;
+    }
+    #body1 {
+        width: 110vw;
+
+    }
+   
+
+    .destination-text {
+        display: none;
+    }
+    .body {
+        padding: 0.3rem;
+    }
+
+}
 /*--------compo3 :Natural geographic features --*/
 
-.compo3  {
-    background-color: rgba(220, 168, 100, 0);
-    position: relative;
-    margin-top: 5%;
-    width: 100%;
-    height: 30vh;
+.body-n{
+    margin-top: clamp(8vh,18vh ,2vh);
+    padding: 2rem;
 }
 
+.body-n h2 {
+    color: rgb(35, 106, 118);
+}
 
+ .flex h5 {
+    margin-top: 10rem;
+ }
 .flex-pics {
+    padding: 2rem;
+    background-color: rgba(250, 235, 215, 0.043);
     display: flex;
-    gap: 5%;
-    margin-top: 4%;
-    margin-left: 5%;
-} 
-.o-btn {
-    position: relative;
-    margin-left: 5%;
-    margin-top: 3%;
-   color: rgb(55, 114, 121);
-    background-color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
+    margin-top: 2rem;
+    margin-left:8% ;
+    width: 90%;
 }
-.o-btn:hover {
-    background-color: rgb(55, 114, 121);
-    color: white;
-    border: none;
-  
+.flex-body-container {
+    background-color: aqua;
+    height: 70vh;
+    padding: 1rem;
 }
 
-
-.flex-body-pics {
+.grid2 {
+    margin-top: clamp(0.5rem,1.2rem,1rem);
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+    gap: clamp(2rem,2rem,1.5rem);
+}
+
+.flex-body-pics1 {
+    display: none;
+}
+
+.natural-pics {
+    display: flex;
+    gap: 1rem;
     margin-left: 3%;
 }
 
+ .grid3 {
+    display: none;
+} 
 
-/*---compo4 :footer ------*/
-.footer-container{
-    background-color: rgb(55, 114, 121);
-    color: white;
-    height: 60vh;
-    position: relative;
-    margin-top: 55%;
+.gride2 h2,h3 {
+   
+    color: aliceblue;
 }
+
+.back h2 {
+    color: aliceblue;
+}
+.back {
+     
+    display: flex;
+    flex-direction: column;
+    padding: clamp(1rem,1rem,3rem);
+   
+
+}
+
+.back-btn {
+
+    margin-top: clamp( 0.3rem,1rem,2rem);
+    height: 40px;
+    border-radius: 5px;
+    border: none;
+    color: rgb(21, 86, 98);
+    background-color: white;
+}
+.back-btn:hover {
+   background-color: rgb(21, 86, 98);
+   color: white;
+}
+
+
+@media(max-width:850px){
+    .flex-body {
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        padding: 1rem;
+    }
+    
+    
+    
+    .grid1 {
+        margin-left: 5%;
+        width: 90vw;
+
+    }
+    .natural-pics {
+      justify-content: center;
+      align-items: center;
+}
+
+    .grid2 {
+        display: none;
+        margin-top: 0;
+        height: 0;
+    }
+
+    
+.flex3 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  padding: 1rem;
+  min-height: 100vh;
+  width: 100%;
+}
+
+} 
+
+@media(max-width:350px){
+    .back-btn {
+        margin-top: 0.3rem;
+    }
+
+    .body-n {
+        margin-top: 30vh;
+        padding: 0.3rem;
+    }
+}
+
+
+
+/*---------4compo:footer ------*/
+
+ .footer-container-d {
+    position: relative;
+    display: flex;
+    grid-template-rows: auto;
+    justify-content: center;
+    gap: clamp(0.1rem ,2.5rem ,2.5rem);
+    margin-top: 20vh;
+    padding-top: -1rem;
+    max-width: 100%;
+    height: 40vh;
+    background-color: rgb(36, 101, 99); 
+} 
+.footer-item-d {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
+    margin-top: 6vh;
+    margin-left: 8rem;
+} 
+
+@media(max-width:876px){
+    .footer-discover {
+        margin-top: 27rem;
+    }
+
+    .footer-container-d {
+    display: flex;
+    grid-template-rows: 1fr 1fr ;
+    gap: 1rem;
+   
+    margin-top: 20vh;
+    padding-top: -1rem;
+    max-width: 100%;
+    height: 70vh;
+    background-color: rgb(36, 101, 99); 
+} 
+.footer-item-d {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
+    margin-top: 1vh;
+    margin-left: 2rem;
+} 
+
+}
+
+@media(max-width:540px){
+    .footer-discover {
+      margin-top: 30vh;
+    }
+    .footer-container-d {
+       
+        display: grid;
+        gap: 1rem;
+        grid-template-rows: 1fr 1fr;
+        height: 60rem;
+    }
+}
+
+
+     
+
+
