--- a/src/components/Flights/Flights.css
+++ b/src/components/Flights/Flights.css
@@ -1,86 +1,172 @@
 /*--Header :compo1-------*/
- .btns-flight {
-    position: absolute;
-     width: 100%;
-    padding: 0;
-    padding-top: 5px;
+ * {
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
+}
+
+.top-text  h1 {
+    margin-top: clamp(2rem,5rem,10rem);
+    margin-left: -10rem;
+}
+ 
+.top-text h3 {
+    margin-top: 3rem;
+    margin-right: 1rem;
+}
+
+.toggle-btn, .nav-close-btn {
+    display: none;
+}
+
+.nav-container {
+    background-color: rgb(255, 255, 255);
+    height: 5vh;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap; 
-    gap: 20px;
-    height: 10%;
-    background-color: rgba(254, 254, 254, 0.927);
-  
- } 
+    gap: 5%;
+}
 
- .flight-text  {
+.nav-container h2 {
+    margin-top: 0.5rem;
+    margin-left: 1rem;
+    font-size: 17px;
+    color: rgb(21, 75, 82);
+}
+
+.nav-btn {
     position: relative;
-    top: 110px;
-    margin-left: 20%;
-    color: rgb(252, 252, 252);
-    max-width: 90%;
-    width: 50%;
-} 
-.btn {
-    color: aqua;
-}
-
-
-.flight-btn button {
-      border: none;
-    color: rgb(42, 122, 112);
-    background-color: rgba(36, 102, 117, 0.005);
-    width: 100px;
-    height: 30px;
-    border-radius: 12px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-.flight-btn button:hover {
+    margin-top: 0.1rem;
+    border-radius: 14px;
+    color: rgba(34, 122, 118, 0.993);
+    background-color: rgb(255, 255, 255);
     border: none;
-    border-radius: 12px;
-   color: rgb(236, 245, 243);
-    background-color: rgba(40, 119, 113, 0.744);
-   
-    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.1rem;
+    width: 10%;
+    height: 30px;
+}
+.nav-btn:hover {
+    color: white;
+    background-color:rgba(38, 139, 134, 0.79) ;
 }
 
-h1 {
-    color: rgb(252, 252, 252);
-    width: 90%;
+
+@media (max-width: 805px) {
+  .toggle-btn  {
+    display: block;
+  
+  }
+
+  
+.nav-container {
+  position: fixed;
+  top: 0;
+  left: -850px;
+  width: 290px;
+  height: 100%;
+  backdrop-filter: blur(10px);
+  background-color: rgba(255, 255, 255, 0.3);
+  box-shadow: 2px 0 8px rgba(0, 0, 0, 0.354);
+  transition: left 0.3s ease;
+  padding: 1rem;
+  z-index: 1000;
 }
+
+.nav-container.open {
+  display: flex;
+  gap: 4.5rem;
+  flex-direction: column;
+  left: 0;
+  
+}
+
+.toggle-btn {
+ background-color: rgba(12, 12, 12, 0);
+ border-color: black;
+ border-radius:10px ;
+  position: fixed;
+  top: 0.5rem;
+  left: 1rem;
+  font-size: 3rem;
+  
+  border: none;
+  color: rgb(251, 247, 247);
+  cursor: pointer;
+  z-index: 1100;
+}
+
+.nav-close-btn {
+  display: block;
+  font-size: 2rem;
+  background: none;
+  border: none;
+  color: rgb(255, 247, 247);
+  margin-left: 80%;
+  cursor: pointer;
+}
+
+.nav-btn {
+    width: 250px;
+    height: 50px;
+    border-radius: 27px;
+    border:1px solid rgb(24, 98, 73);
+    background-color: rgb(239, 250, 246);
+}
+ 
+.nav-btn:hover {
+  color: white;
+  background-color: rgb(50, 148, 133);
+} 
+    
+
+    .nav-container:not(.open) .nav-btn {
+    display: none;
+  }
+
+  .nav-container:not(.open) .nav-close-btn {
+    display: none;
+  }
+
+}
+
+
 
 /*----------2compo: Flight Destinations -------*/
-.top-text {
-    margin-top: 10px;
+.top-text h1  {
+    margin-top: 8rem;
+    
+}
+.top-text h3 {
+    margin-top: 10rem;
 }
 .-container {
      display: flex;
      justify-content: center;
      align-items: center;
      flex-wrap: wrap;
-     margin-top: 2%;
+     margin-top: 2rem;
      margin-left: 3% ;
-    
+   
     gap: 35px;
     
+ }
+
+ .flight-item h3 {
+    color: #f0f8ff;
  }
  
 .f-btn  {
     position: relative;
-    margin-top: 12%;
+   
     border-radius: 5px;
     border: none;
     color: rgb(36, 102, 117); 
     background-color:  rgb(249, 252, 252);;
     width: 190px;
-    height: 50px;
+    height: 40px;
     margin-left: 13%;
 }
 
 .f-btn:hover {
-    border-radius: 5px;
-    border: none;
     background-color:  rgb(36, 101, 99); 
     color:  rgb(244, 248, 248);;
   
@@ -91,23 +177,33 @@ h1 {
     position: relative;
     grid-template-rows: 1fr 1fr ;
     padding-left: 10%;
-    padding-top: 20%;
+    padding-top: 0.5rem;
 }  
 
+.text-f h1 {
+    color: #f0f8ff;
+}
+
+@media(max-width:350px) {
+    .text-f {
+        padding-top: 0;
+       
+    }
+}
 
 
 /*--------KAYAKING:3COMPO ------------*/
-.k-top-text {
+.f-top-text {
     margin-top: 5%;
     padding-left: 5%;
 }
-.k-body {
+.f-body {
     padding: 1%;
     margin: 3%;
     border-radius: 12px;
-    background-color: #3989842f;
+    background-color: #4bb6af2f;
 }
-.kayaking-container {
+.kayaking-container-f {
     position: relative;
     margin-top: 5%;
     display: flex;
@@ -119,11 +215,15 @@ h1 {
 
 }
 
-.kayaking-container h2,h5 {
+.kayaking-container-f h2 {
     color: #f0f8ff;
-    margin-top: 3%;
+    margin-top: 1rem;
     margin-left: 5%;
     
+}
+.kayaking-container-f h5 {
+    margin-top: 0rem;
+    padding-left: 1rem;
 }
 
 .baja {
@@ -135,24 +235,25 @@ h1 {
 .baja-price {
     color: #338f87;
     background-color: #f0f8ff;
-    border-radius: 12px;
+    border-radius: 2px;
     margin-left: 10%;
-    margin-top: 3%;
+    margin-top: 1rem;
     text-align: center;
-    height: 40px;
+    font-size: 1.2rem;
+    height: 30px;
 }
 
 .baja-btn  {
     position: relative;
-    margin-top: 12%;
+    margin-top: 6rem;
     border-radius: 5px;
     border: none;
     color: rgb(36, 102, 117); 
     background-color:  rgb(249, 252, 252);;
     width: 80%;
-    height: 50px;
+    height: 40px;
     margin-left: 9%;
-    margin-bottom: 3%;
+    margin-bottom: 3rem;
 }
 
 .baja-btn:hover {
@@ -171,33 +272,116 @@ h1 {
 
     
 } 
-.kayaking-item {  
-    height: 400px;
+.kayaking-item-f { 
+    margin-top:1rem; 
+    height:350px;
     width: 60%;
     border-radius: 12px;
     grid-template-columns: 2fr 2fr;
     background-color: rgb(42, 147, 135);
 
 }
-.footer-container-book {
+
+@media(max-width:880px){
+    .f-body {
+       
+        width: 95vw;
+        margin:2rem;
+        padding-right: 1rem;
+    }
+    .kayaking-item-f {
+        height: 45vh;
+        width: 77%;
+    }
+
+    .baja-btn {
+        margin-top: 3rem;
+    }
+}
+
+@media(max-width:700px){
+    .f-body {
+       background: none;
+       margin: 0.3rem;
+       
+      
+    }
+    .kayaking-item-f {
+        height: 55vh;
+        width: 77%;
+    }
+}
+
+
+@media(max-width:400px){
+   
+    .kayaking-item-f {
+        height: 65vh;
+        width: 77%;
+    }
+}
+
+
+
+
+
+/*---Footer---------------------*/
+.footer-container-f {
     position: relative;
-    
     display: flex;
-    grid-template-columns: 1fr 1fr ;
-    flex-wrap: wrap;
-    gap: 2px;
-    margin-top: 80px;
+    grid-template-rows: auto;
+    justify-content: center;
+    gap: clamp(0.1rem ,2.5rem ,2.5rem);
+    margin-top: 7vh;
+    padding-top: -2rem;
     max-width: 100%;
-    height: 60vh;
+    height: 40vh;
     background-color: rgb(36, 101, 99); 
 } 
-.footer-item-book {
+.footer-item-f {
     position: relative;
     display: flex;
     flex-direction: column;
-    gap: 10%;
-    margin-top: 7vh;
-    margin-left: 16%;
+    gap: 0.8rem;
+    margin-top: 6vh;
+    margin-left: 8rem;
 } 
 
+@media(max-width:876px){
+    
+    .footer-container-f {
+    display: flex;
+    grid-template-rows: 1fr 1fr ;
+    gap: 1rem;
+   
+    margin-top: 20vh;
+    padding-top: -2rem;
+    max-width: 100%;
+    height: 70vh;
+    background-color: rgb(36, 101, 99); 
+} 
+.footer-item-f {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
+    margin-top: 6vh;
+    margin-left: 2rem;
+} 
+ 
+.compo3 {
+    height: 20vh;
+}
 
+}
+
+@media(max-width:540px){
+    
+    .footer-container-f {
+        margin-top: 10vh;
+        display: grid;
+        gap: 1rem;
+        grid-template-rows: 1fr 1fr;
+        height: 50rem;
+    }
+}
