--- a/src/components/HOME/HomePage.css
+++ b/src/components/HOME/HomePage.css
@@ -1,5 +1,3 @@
-
-
 .img {
   position: absolute;
   top: 0; left: 0;
@@ -9,6 +7,7 @@
   z-index: 1;
   border-radius: 8px;
   background-repeat:no-repeat ;
+
         
 }
 
@@ -17,9 +16,12 @@
   z-index: 2;
   color: white;
   text-align: center;
-  padding-top: 20%;
+  padding-top: 10%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.313);
 }
-/* In your CSS */
+
+
 body {
   font-family: 'Lora', serif;
 }
@@ -38,11 +40,13 @@ p {
 }
 .login,.sign-up{
     position: relative;
-    background-color: antiquewhite;
+    color: rgb(118, 82, 20);
+    background-color: rgb(246, 227, 211);
     border: none;
     border-radius: 8px;
-    height: 33px;
-    width: 140px;
+    height: 47px;
+    width: 240px;
+    font-size: x-large;
 
 }
 .sign-up {
@@ -50,13 +54,8 @@ p {
 }
 .sign-up:hover {  
     position: relative;
-   
-    color: antiquewhite;
-    background:rgb(102, 60, 6) ;
-    border: none;
-    border-radius: 8px;
-    height: 33px;
-    width: 120px;
+    color: rgb(250, 250, 250);
+    background:rgb(112, 81, 30) ;
 }
 .login {
   margin-top: 30px;
@@ -70,6 +69,47 @@ p {
     height: 33px;
     width: 120px;
 }
+
+.menu-bar {
+  position: relative;
+  padding: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  border-radius: 12px;
+  
+}
+
+.menu-bar h2 {
+  position: relative;
+  margin-top: 5rem;
+}
+
+@media(max-width:750px){
+  .menu-bar {
+    position: relative;
+    margin-top: 5rem;
+    
+  }
+}
+
+@media(max-width:380px){ 
+  .sign-up , .login {
+    width: 200px;
+    height: 40px;
+    font-size: 20px;
+  }
+  .menu-bar h1 {
+    font-size: 25px;
+  }
+
+  .menu-bar h2 {
+    display: none;
+  }
+}
+
 
 
 
