--- a/src/components/Hotels/Hotels.css
+++ b/src/components/Hotels/Hotels.css
@@ -1,37 +1,345 @@
 /*----HEADER :COMPO1 ------*/
-.flight-text {
-    width:100%;
-    height:370px;
+* {
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
+}
+
+.toggle-btn, .nav-close-btn {
+    display: none;
+}
+
+.nav-container {
+    background-color: rgb(255, 255, 255);
+    height: 5vh;
+    display: flex;
+    gap: 5%;
+}
+
+.nav-container h2 {
+    margin-top: 0.5rem;
+    margin-left: 1rem;
+    font-size: 17px;
+    color: rgb(21, 75, 82);
+}
+
+.nav-btn {
     position: relative;
-    color: rgb(31, 99, 94);
-      
+    margin-top: 0.1rem;
+    border-radius: 14px;
+    color: rgba(34, 122, 118, 0.993);
+    background-color: rgb(255, 255, 255);
+    border: none;
+    font-size: 1.1rem;
+    width: 10%;
+    height: 30px;
 }
-.black {
-   background-color: rgba(0, 0, 0, 0.34);
-   
+.nav-btn:hover {
+    color: white;
+    background-color:rgba(38, 139, 134, 0.79) ;
 }
 
+
+@media (max-width: 805px) {
+  .toggle-btn  {
+    display: block;
+  
+  }
+
+  
+.nav-container {
+  position: fixed;
+  top: 0;
+  left: -850px;
+  width: 290px;
+  height: 100%;
+  backdrop-filter: blur(10px);
+  background-color: rgba(255, 255, 255, 0.3);
+  box-shadow: 2px 0 8px rgba(0, 0, 0, 0.354);
+  transition: left 0.3s ease;
+  padding: 1rem;
+  z-index: 1000;
+}
+
+.nav-container.open {
+  display: flex;
+  gap: 4.5rem;
+  flex-direction: column;
+  left: 0;
+  
+}
+
+.toggle-btn {
+ background-color: rgba(250, 254, 254, 0.037);
+ border-color: black;
+ border-radius:10px ;
+  position: fixed;
+  top: 0.5rem;
+  left: 1rem;
+  font-size: 3rem;
+  
+  border: none;
+  color: rgb(251, 247, 247);
+  cursor: pointer;
+  z-index: 1100;
+}
+
+.nav-close-btn {
+  display: block;
+  font-size: 2rem;
+  background: none;
+  border: none;
+  color: rgb(255, 247, 247);
+  margin-left: 80%;
+  cursor: pointer;
+}
+
+.nav-btn {
+    width: 250px;
+    height: 50px;
+    border-radius: 27px;
+    border:1px solid rgb(24, 98, 73);
+    background-color: rgb(239, 250, 246);
+}
+ 
+.nav-btn:hover {
+  color: white;
+  background-color: rgb(50, 148, 133);
+} 
+    
+
+    .nav-container:not(.open) .nav-btn {
+    display: none;
+  }
+
+  .nav-container:not(.open) .nav-close-btn {
+    display: none;
+  }
+
+}
+
+
+@media(max-width:450px){
+  .text-home h2{
+    font-size: 1rem;
+  }
+}
+ 
 /*---------compo2:RESEARCH ----------------------*/
-
-.top-search {
-    margin-top: 3%;
+ 
+ .top-search {
+   position: relative;
+   margin-top: 6rem;
     display: flex;
-    gap: 16%;
     justify-content: center;
-    
-}
+    flex-direction: row;
+    gap: 7rem;
+   }
 
-.top-search {
-    display: flex;
-    flex-wrap: wrap;
-    
-}
+   .top-text h2 {
+    margin-top: 14rem;
+   }
 
-.img-search {
+   .search {
+    margin-top: 1rem;
     border-radius: 12px;
-    width: 120px;
+     box-shadow: 0 4px 8px rgba(59, 57, 57, 0.354);
+    display: flex;
+    flex-direction: row;
+    width: 100px;
+    width: 250px;
+    font-size: 1.6rem;
+    margin-left: 0rem;
+   }
+.img-search {
+  display: flex;
+  flex-direction: column;
+    margin-right: 1rem;
+    border-radius: 12px;
+    width: 99px;
     height: 120px;
 }
- .text-f h3 {
-    color: rgb(255, 255, 255);
+
+.search h6 {
+  margin-left: 1rem;
+}
+.search h4 {
+  margin-left: 1rem;
+}
+
+
+ @media(max-width:1120px){
+   .top-search {
+    display: flex;
+    flex-direction: column;
+    margin-left: 5rem;
+    gap: 1.5rem;
+    width: 50%;
+   }
+
+   .search {
+   
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%;
+    font-size: 2rem;
+   }
+
+
+}  
+
+@media(max-width:1400px){
+   .top-search {
+    display: flex;
+    flex-direction: column;
+    margin-top: 27vh;
+    gap: 1rem;
+    width: 70%;
+    padding: 1rem;
+    
+   }
+   .search {
+    width: 70%;
+   }
+ 
+
+}  
+
+@media(max-width:950px){
+   .top-search {
+    margin-top: 2vh;
+    align-items: center;
+   }
+}
+
+@media(max-width:490px){
+  .search {
+    width: 210px;
+  }
+}
+/*------destinations------------------------------ ---*/
+.d-body h2 ,h4 {
+ 
+    margin-left: 6rem;
+}
+
+.f-btn {
+    margin-top: 4rem;
+  }
+
+
+
+@media(max-width:350px){
+  .top-text  h1{
+    font-size: 1.6rem;
+  }
+}
+
+/*-----kayaking compo 4 ----------------------------*/
+
+
+.f-top-text {
+    margin-top: 5%;
+    padding-left: 5%;
+}
+.h-body {
+    margin: 2rem;
+    padding: 1%;
+    margin-top: 15vh;
+    border-radius: 12px;
+    background-color: #4bb6af2f;
+}
+
+.kayaking-container-f {
+    position: relative;
+    margin-top: 5%;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    width: 98%;
+    height: 55vh;
+    
+
+}
+
+@media(max-width:520px){
+    .kayaking-container-f {
+        margin-top: 2vh;
+        width: 95vw;
+        padding-right:1rem;
+       
+    }
+
+}
+
+
+
+/*---------6compo:footer ------*/
+
+ .footer-container-hotel {
+    position: relative;
+    display: flex;
+    grid-template-rows: auto;
+    justify-content: center;
+    gap: clamp(0.1rem ,2.5rem ,2.5rem);
+    margin-top: 20vh;
+    padding-top: -2rem;
+    max-width: 100%;
+    height: 40vh;
+    background-color: rgb(36, 101, 99); 
 } 
+.footer-item-h {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
+    margin-top: 6vh;
+    margin-left: 8rem;
+} 
+
+@media(max-width:876px){
+   
+    .footer-container-hotel {
+    display: flex;
+    grid-template-rows: 1fr 1fr ;
+    gap: 1rem;
+   
+    margin-top: 15vh;
+    padding-top: -2rem;
+    max-width: 100%;
+    height: 70vh;
+    background-color: rgb(36, 101, 99); 
+} 
+.footer-item-h {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
+    margin-top: 6vh;
+    margin-left: 2rem;
+} 
+
+}
+
+@media(max-width:700px){
+    .h-body {
+       background: none;
+       margin: 0.3rem;
+      
+    }
+    .kayaking-item-h {
+        height: 45vh;
+        width: 77%;
+    }
+}
+
+
+@media(max-width:540px){
+    .footer-container-hotel {
+        display: grid;
+        gap: 1rem;
+        grid-template-rows: 1fr 1fr;
+        height: 60rem;
+    }
+}
