--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,3 +1,7 @@
+
+
+
+
 *{
     padding: 0;
     margin: 0;
@@ -27,6 +31,7 @@ body {
   font-family: 'Lora', serif;
 }
 a {
+    font-size: 1rem;
     color: rgb(174, 83, 50);
 }
 h1, h3,p, button ,h5 ,h6{
@@ -52,23 +57,21 @@ h1, h3,p, button ,h5 ,h6{
     z-index: 3;/*ensure it is above overlay*/
    
 }
-
+ 
 .login-btn{
-
-    width: 156px;
-    height: 32px;
+    position: relative;
+    margin-top: 1rem;
+    margin-right: 0rem;
+    width: 300px;
+    height: 37px;
     background-color: antiquewhite;
     border: none;
-    border-radius: 9px;
+    border-radius: 6px;
 }
 .login-btn:hover{
-   
-    width: 156px;
-    height: 32px;
     color: antiquewhite;
     background-color: rgb(75, 48, 12);
-    border: none;
-    border-radius: 9px;
+  
 }
 
 input {
@@ -103,4 +106,4 @@ header {
     input,.login-btn {
         font-size: 0.9rem;
     }
-}
+} 
