--- a/src/components/Signup/SignUp.css
+++ b/src/components/Signup/SignUp.css
@@ -7,10 +7,13 @@
   position: absolute;
   top: 0; left: 0;
   width: 100%;
+  
+  min-height: 200vh;
   height: 100%;
   object-fit: cover;
   z-index: 1;
 }
+
 
 .over {
   display: flex;
@@ -19,100 +22,183 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 1rem;
+  padding: 2rem;
   
 }
 
 a {
-    color: rgb(215, 102, 61);
+    color: rgb(215, 61, 61);
     font-size: small;
 }
 
 
-h1,label ,h4 ,h6{
-    color: rgb(102, 60, 6);
+ header label  {
+    
+    color: rgb(31, 107, 118);
   font-family: 'Montserrat', sans-serif;
 }
 
-.form-container-signup {
-    position: relative;
-    border-radius: 12px;
-    background-color:rgba(255, 255, 255, 0.836) ;
-    display: flex;
-     padding: 2rem;
-    flex-direction: column ;
-    justify-content: center;
-    align-items: center;
-    border-radius: 12px;
-    max-width: 90vh;
-    overflow-x: auto;
-    width: 90%;
-    max-height: 800px;
-    height: 80vh;
-    z-index: 3;
-     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-   
+#item1 {
+  position: relative;
+
 }
- input {
-  border-radius: 9px;
-  border: 1px solid rgb(69, 135, 130); 
-  height: 30px;
-  width: 180px;
-    
+header h1 {
+  position: relative;
+  margin-left: 13rem;
 }
-#item1  {
-  position: absolute;
-  top: 0%
-}
-#item2 {
-  
-  position: absolute;
-  top: 20%;
-}
-#item3 {
-  position: absolute;
-  top: 57%;
-}
-.item4 {
-  position: absolute;
-  top: 38%;
-}
-#item5 {
-  position: absolute;
-  top: 74%;
-}
-#item6 {
-  position: absolute;
-  top: 88%;
+header h4 {
+  margin-left: 30px;
+   width: clamp(20% 30% 50%);
+   color: rgb(31, 107, 118);
 }
 
-.sign-btn{
-    width: 178px;
+.form-container-signup {
+  background-color: rgba(250, 250, 250, 0.977);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1rem;
+  border-radius: 8px;
+  width: 70%;
+  max-width: 600px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  z-index: 3;
+}
+
+
+
+.item2 {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 90%;
+  max-width: 300px;
+  margin-bottom: 2rem;
+  margin-top: 2.5rem;
+}
+
+.item2 h5 {
+  margin-bottom: 0rem;
+  color: black;
+}
+
+.item2 input {
+  width: 100%;
+  height: 35px;
+  padding: 0.5rem;
+  border-radius: 5px;
+  border: 1px solid rgb(69, 135, 130);
+  font-size: 1rem;
+}
+
+.error {
+  margin-top: 0.2rem;
+  font-size: 1rem;
+  margin-left: 1rem;
+  color: red;
+}
+
+.item3 {
+  background-color: rgb(248, 248, 248);
+  margin-top: 1.5rem;
+  text-align: center;
+}
+
+.item3 h5 {
+  margin-top: 1rem;
+  font-size: 1rem;
+}
+
+.item-text h5{
+  color: rgb(11, 6, 6);
+}
+
+
+.sign-btn {
+  width: 300px;
+  height: 40px;
+  background-color: antiquewhite;
+  border: none;
+  border-radius: 6px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.sign-btn:hover {
+  background-color: rgb(100, 66, 28);
+  color: antiquewhite;
+}
+
+@media (max-width: 800px) {
+  .form-container-signup {
+    width: 60%;
+    padding: 1rem;
+  }
+
+  .item2 input {
     height: 33px;
-    background-color: antiquewhite;
-    border: none;
-    border-radius: 9px;
-}
- .sign-btn:hover{
-    width: 170px;
+  }
+
+  header h1 {
+    font-size: 2rem;
+    padding-right: 15rem;
+  }
+
+  header h4 {
+    display:none ;
+  }
+
+  .sign-btn {
+    width: 300px;
     height: 35px;
-    color: antiquewhite;
-    background-color: rgb(100, 66, 28);
-    border: none;
-    border-radius: 9px;
+  }
 }
-label {
-  font-size: small;
+
+@media (max-width:400px){
+  .item2 {
+   position: absolute;
+   margin-top: 33px;
+  }
+  header h4 {
+    display: none;
+  }
+     
+    header h1 {
+      margin-right: 32rem;
+      font-size: 36px;
+    }
+ 
+
 }
- p {
-  font-size: small;
-  color:rgb(101, 54, 25)
- }
- .item-text {
-  color:rgb(101, 54, 25);
-  margin-right: 56%;
- }
-.err {
-  font-size: x-small;
-  margin-right: 20%;
+
+@media (max-width:400px){
+  .item2 {
+   position: relative;
+   margin-top: 35px;
+  }
+      
+
+  .item2  input{
+  position: relative;
+  border-radius: 5px;
+  border: 1px solid rgb(69, 135, 130); 
+  height: 33px;
+  width: 150px;
+    
+  }
+  .item3 {
+    position: relative;
+    margin-left: 2rem;
+  }
+   .sign-btn {
+     width: 160px;
+     
+    }
+     
+    header h1 {
+      margin-right: 30rem;
+      font-size: 30px;
+    }
+ 
 }
