--- a/src/components/Flights/BookFlight/BookFlight.css
+++ b/src/components/Flights/BookFlight/BookFlight.css
@@ -1,53 +1,251 @@
 /*--Header :compo1-------*/
-
-.plan-book {
-  position: absolute;
-  z-index: 2;
-  top: 0;left: 0;
-  width: 100%;
-  height: 60vh;
-  color: white;
-  text-align: center;
-  padding-top: 15%;
-}
-.btns-container-book {
-    position: absolute;
-    top: 0%;right: 0%;
-    padding: 0px;
-    display: flex;
-    flex-direction:row ;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 1px;
-    width: 100%;
-    height: 10%;
-    
-    background-color: rgba(50, 116, 135, 0.6);
-
+ * {
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
 }
 
-.user-books-flight {
+.top-text  h1 {
+    margin-top: clamp(2rem,5rem,10rem);
+    margin-left: -10rem;
+}
+ 
+.top-text h3 {
+    margin-top: 3rem;
+    margin-right: 1rem;
+}
+
+.navbar-toggle-btn, .navbar-close-btn {
+    display: none;
+}
+
+.navbar-container {
     position: relative;
-    margin-left: 10%;
+    background-color: rgb(255, 255, 255);
+    height: 5vh;
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    border-radius: 8px;
-    z-index: 10;
-    justify-content: center;
-    align-items: center;
-
+    gap: 5%;
+    z-index: 100;
 }
-  .input {
-    font-family: 'Poppins', sans-serif;
-    border-radius: 5px;
+
+.navbar-container h2 {
+    margin-top: 0.5rem;
+    margin-left: 1rem;
+    font-size: 17px;
+    color: rgb(21, 75, 82);
+}
+
+.navbar-btn {
+    position: relative;
+    margin-top: 0.1rem;
+    border-radius: 14px;
+    color: rgba(34, 122, 118, 0.993);
+    background-color: rgb(255, 255, 255);
+    border: none;
+    font-size: 1.1rem;
+    width: 10%;
+    height: 30px;
+}
+.navbar-btn:hover {
+    color: white;
+    background-color:rgba(38, 139, 134, 0.79) ;
+}
+
+
+@media (max-width: 805px) {
+  .navbar-toggle-btn  {
+    display: block;
   
+  }
+
+  
+.navbar-container {
+  position: fixed;
+  top: 0;
+  left: -850px;
+  width: 290px;
+  height: 100%;
+  backdrop-filter: blur(10px);
+  background-color: rgba(255, 255, 255, 0.3);
+  box-shadow: 2px 0 8px rgba(0, 0, 0, 0.354);
+  transition: left 0.3s ease;
+  padding: 1rem;
+  z-index: 1000;
+}
+
+.navbar-container.open {
+  display: flex;
+  gap: 4.5rem;
+  flex-direction: column;
+  left: 0;
+  
+}
+
+.navbar-toggle-btn {
+ background-color: rgba(12, 12, 12, 0);
+ border-color: black;
+ border-radius:10px ;
+  position: fixed;
+  top: 0.5rem;
+  left: 1rem;
+  font-size: 3rem;
+  
+  border: none;
+  color: rgb(251, 247, 247);
+  cursor: pointer;
+  z-index: 1100;
+}
+
+.navbar-close-btn {
+  display: block;
+  font-size: 2rem;
+  background: none;
+  border: none;
+  color: rgb(255, 247, 247);
+  margin-left: 80%;
+  cursor: pointer;
+}
+
+.navbar-btn {
+    width: 250px;
+    height: 50px;
+    border-radius: 27px;
+    border:1px solid rgb(24, 98, 73);
+    background-color: rgb(239, 250, 246);
+}
+ 
+.navbar-btn:hover {
+  color: white;
+  background-color: rgb(50, 148, 133);
 } 
-.flex-input-result {
+    
+
+    .navbar-container:not(.open) .nav-btn {
+    display: none;
+  }
+
+  .navbar-container:not(.open) .nav-close-btn {
+    display: none;
+  }
+
+}
+
+
+
+
+
+.book-flight {
+    background-color: rgb(255, 255, 255);
+    margin-top: -6rem;
+    height: 90vh;
+}
+.flight-header {
+  margin-top: 2rem;
+  
+}
+
+
+.flight-form {
+ width: 100vw;
+  
+    padding: 2rem;
+    background-color: rgb(214, 243, 236);
+  margin-top: 5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.flight-form input {
+  border-color: rgb(19, 70, 82);
+  padding: 0.8rem;
+  border-radius: 6px;
+  width: 25vw;
+
+  border: 1px solid #ccc;
+}
+
+
+html label {
+    font-family: 'Montserrat', sans-serif;;
+}
+
+label {
+    
+    margin-right: 10rem;
+}
+
+
+@media(max-width:760px){
+  .flight-form input {
+    width: 230px;
+  }
+
+  .flight-form h4 {
+    display: none;
+  }
+}
+
+
+/*-----------------------------Footer---------------------*/
+.footer-container-b {
     position: relative;
-    margin-top: 10%;
-    padding-bottom: 5%;
-    border-radius: 8px;
-    background-color:  rgba(55, 126, 146, 0.132);
+    display: flex;
+    grid-template-rows: auto;
+    justify-content: center;
+    gap: clamp(0.1rem ,2.5rem ,2.5rem);
+    margin-top: 7vh;
+    padding-top: -2rem;
+    max-width: 100%;
+    height: 40vh;
+    background-color: rgb(36, 101, 99); 
+} 
+.footer-item-b {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
+    margin-top: 6vh;
+    margin-left: 8rem;
+} 
+
+@media(max-width:876px){
+    
+    .footer-container-b {
+    display: flex;
+    grid-template-rows: 1fr 1fr ;
+    gap: 1rem;
+   
+    margin-top: 20vh;
+    padding-top: -2rem;
+    max-width: 100%;
+    height: 70vh;
+    background-color: rgb(36, 101, 99); 
+} 
+.footer-item-b{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
+    margin-top: 6vh;
+    margin-left: 2rem;
+} 
+ 
+.compo3 {
+    height: 20vh;
+}
+
+}
+
+@media(max-width:540px){
+    
+    .footer-container-b {
+        margin-top: 10vh;
+        display: grid;
+        gap: 1rem;
+        grid-template-rows: 1fr 1fr;
+        height: 50rem;
+    }
 }
