--- a/src/components/Hotels/Hotels.css
+++ b/src/components/Hotels/Hotels.css
@@ -5,25 +5,37 @@
   box-sizing: border-box;
 }
 
-.toggle-btn, .nav-close-btn {
+.top-text  h1 {
+    margin-top: clamp(2rem,5rem,10rem);
+    margin-left: -10rem;
+}
+ 
+.top-text h3 {
+    margin-top: 3rem;
+    margin-right: 1rem;
+}
+
+.navbar-toggle-btn, .navbar-close-btn {
     display: none;
 }
 
-.nav-container {
+.navbar-container {
+    position: relative;
     background-color: rgb(255, 255, 255);
     height: 5vh;
     display: flex;
     gap: 5%;
+    z-index: 100;
 }
 
-.nav-container h2 {
+.navbar-container h2 {
     margin-top: 0.5rem;
     margin-left: 1rem;
     font-size: 17px;
     color: rgb(21, 75, 82);
 }
 
-.nav-btn {
+.navbar-btn {
     position: relative;
     margin-top: 0.1rem;
     border-radius: 14px;
@@ -34,20 +46,20 @@
     width: 10%;
     height: 30px;
 }
-.nav-btn:hover {
+.navbar-btn:hover {
     color: white;
     background-color:rgba(38, 139, 134, 0.79) ;
 }
 
 
 @media (max-width: 805px) {
-  .toggle-btn  {
+  .navbar-toggle-btn  {
     display: block;
   
   }
 
   
-.nav-container {
+.navbar-container {
   position: fixed;
   top: 0;
   left: -850px;
@@ -61,7 +73,7 @@
   z-index: 1000;
 }
 
-.nav-container.open {
+.navbar-container.open {
   display: flex;
   gap: 4.5rem;
   flex-direction: column;
@@ -69,8 +81,8 @@
   
 }
 
-.toggle-btn {
- background-color: rgba(250, 254, 254, 0.037);
+.navbar-toggle-btn {
+ background-color: rgba(12, 12, 12, 0);
  border-color: black;
  border-radius:10px ;
   position: fixed;
@@ -84,7 +96,7 @@
   z-index: 1100;
 }
 
-.nav-close-btn {
+.navbar-close-btn {
   display: block;
   font-size: 2rem;
   background: none;
@@ -94,7 +106,7 @@
   cursor: pointer;
 }
 
-.nav-btn {
+.navbar-btn {
     width: 250px;
     height: 50px;
     border-radius: 27px;
@@ -102,29 +114,22 @@
     background-color: rgb(239, 250, 246);
 }
  
-.nav-btn:hover {
+.navbar-btn:hover {
   color: white;
   background-color: rgb(50, 148, 133);
 } 
     
 
-    .nav-container:not(.open) .nav-btn {
+    .navbar-container:not(.open) .nav-btn {
     display: none;
   }
 
-  .nav-container:not(.open) .nav-close-btn {
+  .navbar-container:not(.open) .nav-close-btn {
     display: none;
   }
 
 }
 
-
-@media(max-width:450px){
-  .text-home h2{
-    font-size: 1rem;
-  }
-}
- 
 /*---------compo2:RESEARCH ----------------------*/
  
  .top-search {
