--- a/src/components/Discover/Discover.css
+++ b/src/components/Discover/Discover.css
@@ -19,13 +19,16 @@
 }
 
 .navbar-container {
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     background-color: rgb(255, 255, 255);
     height: 5vh;
     display: flex;
     gap: 5%;
-    z-index: 100;
-}
+    z-index: 9999;
+} 
 
 .navbar-container h2 {
     margin-top: 0.5rem;
@@ -59,9 +62,8 @@
 
   
 .navbar-container {
-  position: fixed;
   top: 0;
-  left: -850px;
+   left: -850px; 
   width: 290px;
   height: 100%;
   backdrop-filter: blur(10px);
@@ -69,14 +71,20 @@
   box-shadow: 2px 0 8px rgba(0, 0, 0, 0.354);
   transition: left 0.3s ease;
   padding: 1rem;
-  z-index: 1000;
+  transition: transform 0.6s ease, opacity 0.6s ease;
+  transform: translateX(-100%);
+  opacity: 0;
+  visibility: hidden;
 }
 
 .navbar-container.open {
+   transform: translateX(0);
+  opacity: 1;
+  visibility: visible;
   display: flex;
   gap: 4.5rem;
   flex-direction: column;
-  left: 0;
+  
   
 }
 
