--- a/src/components/Flights/Flights.css
+++ b/src/components/Flights/Flights.css
@@ -352,7 +352,7 @@
     margin-top: 20vh;
     padding-top: -2rem;
     max-width: 100%;
-    height: 70vh;
+    height: 80vh;
     background-color: rgb(36, 101, 99); 
 } 
 .footer-item-f {
@@ -372,11 +372,14 @@
 
 @media(max-width:540px){
     
-    .footer-container-f {
-        margin-top: 10vh;
+      .footer-container-f {
+        height: 60vh;
+       
+        padding-bottom: 2rem;
         display: grid;
-        gap: 1rem;
-        grid-template-rows: 1fr 1fr;
-        height: 50rem;
+        gap: 0rem;
+        grid-template-columns: 1fr 1fr   ;
+       
     }
+
 }
