--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -34,7 +34,7 @@ a {
 .login {
     position: relative;
     margin-right: 3rem;
-    background-color: rgba(240, 248, 255, 0);
+    background-color: rgba(10, 11, 11, 0);
     font-size: 2rem;
     
 }
@@ -49,12 +49,13 @@ a {
   font-family: 'Montserrat', sans-serif;
 }
 
-#item1 {
+ .item1 {
   position: relative;
+  margin-right: 5rem;
+ 
 
-}
+} 
 header h1 {
-  position: relative;
   margin-left: 13rem;
 }
 header h4 {
@@ -125,11 +126,10 @@ header h4 {
 }
 
 
-.login-btn {
-  width: 100%;
+#login-btn {
+  width: 120%;
   height: 40px;
-  max-width: 300px;       
-  min-width: 180px;  
+  margin-left: -1.3rem;    
   background-color: antiquewhite;
   border: none;
   border-radius: 6px;
@@ -138,7 +138,7 @@ header h4 {
   transition: background-color 0.3s ease;
 }
 
-.login-btn:hover {
+#login-btn:hover {
   background-color: rgb(100, 66, 28);
   color: antiquewhite;
 }
@@ -149,44 +149,40 @@ header h4 {
     padding: 1rem;
   }
 
-  .login-btn {
-    width: 60%;
-  }
-
   .item2 input {
     height: 33px;
   }
 
   header h1 {
     font-size: 2rem;
-    padding-right: 15rem;
-  }
-
-  header h4 {
-    display:none ;
-  }
+    padding-right: 5rem;
+  } 
 
   
+}
+@media(max-width:515px){
+  
+  #login-btn {
+    margin-left: -2rem;
+    width: 125%;
+  }
+
 }
 
 @media (max-width:400px){
   .item2 {
    position: relative;
    margin-top: 33px;
-  }
-  header h4 {
-    display: none;
-  }
-     
-    header h1 {
-      margin-right: 32rem;
-      font-size: 36px;
-    }
+  }  
+  
+}
 
-    .login-btn {
-      width: 70%;
-    }
- 
+@media(max-width:466px){
+  
+  #login-btn {
+    width: 100%;
+    margin-left: 0rem;
+  }
 
 }
 
@@ -196,14 +192,10 @@ header h4 {
     position: relative;
     margin-left: 0rem;
   }
-   .login-btn {
-     width: 10vw;
-     
-    }
-     
-    header h1 {
+  
+    /* header h1 {
       margin-right: 1rem;
       font-size: 1.4rem;
-    }
+    } */
  
 } 
